--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,11 @@ html {
 }
 body {
 	font-family: "Nunito", "Arial", "Helvetica", sans-serif;
-	display: flex;
-	min-height: 100vh;
 	margin: 0;
-	align-items: center;
-	justify-content: center;
 	background-color: ghostwhite;
 }
 
-h1 {
-	font-weight: 800;
-	color: royalblue;
+a {
+	color: inherit;
+	text-decoration: none;
 }
