--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 	font-family: "Nunito", "Arial", "Helvetica", sans-serif;
 	margin: 0;
 	background-color: ghostwhite;
+	/* color: aliceblue; */
 }
 
 a {
