--- a/src/components/pages/MainPage/stylee.css
+++ b/src/components/pages/MainPage/stylee.css
@@ -26,7 +26,7 @@
     right: 0;
     bottom: 0;
     backdrop-filter: blur(2px);
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.752) 60%, rgba(33, 93, 213, 0.771));
+    background-image: linear-gradient(to right, #f8f8ffd4 60%, #0000009e);
 }
 .post:hover {
     box-shadow: 0 0 5px 0 #0003, 0 0 15px 0 #0003;
