--- a/src/components/pages/MainPage/stylee.css
+++ b/src/components/pages/MainPage/stylee.css
@@ -2,38 +2,25 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-.post {
-    box-shadow: 0 0 5px 0 #0003;
+    background-image: url('../../../assets/images/Deep\ Purple\ -\ Ultrawide.png');
+    background-size: cover;
+    height: 70vh;
     border-radius: 10px;
-    padding: 20px;
-    transition-property: transform, box-shadow;
-    transition-duration: .5s;
-    font-size: 20px;
-    background: no-repeat center / cover;
-    position: relative;
-    overflow: hidden;
+    opacity: 0.6;
 }
-.post>* {
-    position: relative;
-    z-index: 2;
-}
-.post::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    backdrop-filter: blur(2px);
-    background-image: linear-gradient(to right, #f8f8ffd4 60%, #0000009e);
-}
-.post:hover {
-    box-shadow: 0 0 5px 0 #0003, 0 0 15px 0 #0003;
-    transform: scale(1.01, 1.01);
-    font-size: 20px;
-}
-
 .more {
     cursor: pointer;
+    color: #fff;
+}
+
+.main__text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.text {
+    color: #fff;
 }
