--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,14 @@
 * {
 	box-sizing: inherit;
 }
-html {
-	box-sizing: border-box;
-}
 body {
 	font-family: "Nunito", "Arial", "Helvetica", sans-serif;
 	margin: 0;
-	background-color: ghostwhite;
+	/* background-color: ghostwhite; */
+	background-color: #04050c;
 
 	/* color: aliceblue; */
+	color: #f9c2f5;
 }
 
 a {
